Removing padding from the tabpanels. This was causing layout issues with browsers unable to calculate the size of children

--- a/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
+++ b/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
@@ -313,7 +313,7 @@ legend {
   border-right:1px solid #8d8d8d;
   border-left:1px solid #8d8d8d;
   border-bottom:1px solid #8d8d8d;
-  padding: 3px 7px 3px 4px;
+  padding: 0px;
 }
 
 .xulTabBar {
